--- a/javascript/quiz-along/app.css
+++ b/javascript/quiz-along/app.css
@@ -1,5 +1,5 @@
 :root {
-    background-image: url("/dott-pattern-coral.png");
+    background-image: url("dott-pattern-coral.png");
     background-color: #ffcc66;
     font-size: 62.5%;
 }
@@ -40,6 +40,10 @@ h2 {
 h3 {
   font-size: 2.8rem;
   font-weight: 500;
+}
+
+h4 {
+  font-size: 2.3rem;
 }
 /* UTILITIES */
 
